--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,3 +12,4 @@ tokio-test = "0.4.2"
 reqwest = "0.11.10"
 tokio = { version = "1.8.2", features = ["full"] }
 scraper = "0.13.0"
+html_parser = "0.6.3"
