--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,3 +13,4 @@ reqwest = "0.11.10"
 tokio = { version = "1.8.2", features = ["full"] }
 scraper = "0.13.0"
 html_parser = "0.6.3"
+tokio-postgres = "0.7.6"
